--- a/css/hacker.css
+++ b/css/hacker.css
@@ -12,3 +12,23 @@ fieldset {
 legend {
     width: auto;
 }
+
+table {
+    margin-top: 10px;
+    margin-bottom: 10px; 
+    margin-left: auto;
+    margin-right: auto; 
+    border: 1px solid black;
+}
+
+tr, td, th {
+    border: 1px solid black;
+}
+
+td {
+    padding: 10px;
+}
+
+caption {
+    caption-side: top;
+}
