--- a/css/organizer.css
+++ b/css/organizer.css
@@ -1,23 +1,73 @@
-body {
+@import url('https://fonts.googleapis.com/css?family=Varela+Round');
+
+html,body{
+background-image: url('https://www.jpl.nasa.gov/spaceimages/images/largesize/PIA10182_hires.jpg');
+background-size: auto;
+background-repeat: no-repeat;
+height: 100%;
+font-family: 'Varela Round', sans-serif;
 }
 
-.checkin, .checkout {
+.card{
+margin-top: auto;
+margin-bottom: auto;
+background-color: rgba(0,0,0,0.5) !important;
+}
+
+fieldset {
+	color: white;
+	background-color: rgba(0,0,0,0.5) !important;
+    display: block;
+    margin-left: 2px;
+    margin-right: 2px;
+    padding-top: 0.35em;
+    padding-bottom: 0.625em;
+    padding-left: 0.75em;
+    padding-right: 0.75em;
+    border: 2px groove;
+}
+
+legend {
+    width: auto;
+    color: white;
+}
+
+table {
+	background-color: rgba(0,0,0,0.5) !important;
+	color: white;
+    margin-top: 10px;
+    margin-bottom: 10px; 
+    margin-left: auto;
+    margin-right: auto; 
+    border: 1px solid black;
+}
+
+tr, td, th {
     border: 1px solid black;
     padding: 5px;
-    margin: 5px;
+    text-align: center;
 }
 
-#mentorName {
-    float: left;
+td {
+    padding: 10px;
 }
 
-input[type=submit] {
-    margin-left: 5px;
+caption {
+	background-color: rgba(0,0,0,0.5) !important;
+	color: white;
+	text-align: center;
+    caption-side: top;
 }
 
-@media screen and (max-width: 600px) {
-    .nameinput, .labels, .submission {
-        width: 100%;
-        margin-top: 0;
-    }
+
+.btn-submit{
+color: black;
+background-color: #FF8412;
+width: 100px;
+}
+
+.btn-submit:hover{
+color: black;
+background-color: white;
+
 }
