--- a/css/mentor.css
+++ b/css/mentor.css
@@ -13,6 +13,15 @@ body {
     background-color: rgba(0,0,0,0.5) !important;
 }
 
+.collapsing {
+  position: relative;
+  height: 0;
+  overflow: hidden;
+  -webkit-transition: height .10s ease;
+       -o-transition: height .10s ease;
+          transition: height .10s ease;
+}
+
   table {
     border: 1px solid #ccc;
     border-collapse: collapse;
