--- a/css/organizer.css
+++ b/css/organizer.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Varela+Round');
 
 html,body{
-background-image: url('https://www.jpl.nasa.gov/spaceimages/images/largesize/PIA10182_hires.jpg');
+background-color: #660000;
 background-size: auto;
 background-repeat: no-repeat;
 height: 100%;
