--- a/css/organizer.css
+++ b/css/organizer.css
@@ -46,31 +46,93 @@ legend {
 }
 
 table {
-	background-color: rgba(0,0,0,0.5) !important;
-	color: white;
-    margin-top: 10px;
-    margin-bottom: 10px; 
-    margin-left: auto;
-    margin-right: auto; 
-    border: 1px solid black;
-}
+    border: 1px solid #ccc;
+    border-collapse: collapse;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    table-layout: fixed;
+  }
+  
+  table caption {
+    font-size: 1.5em;
+    color: white;
+    margin: .5em 0 .75em;
+  }
 
-tr, td, th {
-    border: 1px solid black;
-    padding: 5px;
-    text-align: center;
-}
-
-td {
-    padding: 10px;
-}
-
-caption {
-	background-color: rgba(0,0,0,0.5) !important;
-	color: white;
-	text-align: center;
+  caption {
     caption-side: top;
-}
+  }
+  
+  table tr {
+    background-color: #f8f8f8;
+    border: 1px solid #ddd;
+    padding: .35em;
+  }
+  
+  table th,
+  table td {
+    padding: .625em;
+    text-align: center;
+  }
+  
+  table th {
+    font-size: .85em;
+    letter-spacing: .1em;
+    text-transform: uppercase;
+  }
+  
+  @media screen and (max-width: 600px) {
+    table {
+      border: 0;
+    }
+  
+    table caption {
+        background-color: rgba(0,0,0,0.5) !important;
+        color: white;
+        text-align: center;
+        caption-side: top;
+    }
+    
+    table thead {
+      border: none;
+      clip: rect(0 0 0 0);
+      height: 1px;
+      margin: -1px;
+      overflow: hidden;
+      padding: 0;
+      position: absolute;
+      width: 1px;
+    }
+    
+    table tr {
+      border-bottom: 3px solid #ddd;
+      display: block;
+      margin-bottom: .625em;
+    }
+    
+    table td {
+      border-bottom: 1px solid #ddd;
+      display: block;
+      font-size: .8em;
+      text-align: right;
+    }
+    
+    table td::before {
+      /*
+      * aria-label has no advantage, it won't be read inside a table
+      content: attr(aria-label);
+      */
+      content: attr(data-label);
+      float: left;
+      font-weight: bold;
+      text-transform: uppercase;
+    }
+    
+    table td:last-child {
+      border-bottom: 0;
+    }
+  }
 
 
 .btn-submit{
