--- a/css/forgot-password.css
+++ b/css/forgot-password.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Varela+Round');
 
-html,body{
-    background-color: #660000;
+html,body{    
+    background-image: url('https://www.jpl.nasa.gov/spaceimages/images/largesize/PIA10182_hires.jpg');
     background-size: auto;
     background-repeat: no-repeat;
     height: 100%;
@@ -21,10 +21,28 @@ html,body{
           transition: height .10s ease;
 }
 
+.container{
+height: 100%;
+align-content: center;
+}
+
 .card{
+height: 200px;
 margin-top: auto;
 margin-bottom: auto;
+width: 400px;
 background-color: rgba(0,0,0,0.5) !important;
+}
+
+.card-header h3{
+color: white;
+}
+
+.input-group-prepend span{
+width: 40px;
+background-color: #FF8412;
+color: black;
+border:0 !important;
 }
 
 fieldset {
@@ -55,4 +73,4 @@ legend {
     color: black;
     background-color: white;
     
-    }
+}
