--- a/css/forgot-password.css
+++ b/css/forgot-password.css
@@ -3,6 +3,7 @@
 html,body{    
     background-image: url('https://www.jpl.nasa.gov/spaceimages/images/largesize/PIA10182_hires.jpg');
     background-size: auto;
+    overflow: hidden;
     background-repeat: no-repeat;
     height: 100%;
     font-family: 'Varela Round', sans-serif;
